@@ -33,11 +33,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.time.LocalDate;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -156,7 +157,7 @@ class DeclarationConcurrencyIT extends MySQLContainerBase {
         Runnable approveTask = () -> {
             // Each thread sets its own security context (ThreadLocal)
             SecurityContextHolder.getContext().setAuthentication(
-                    new UsernamePasswordAuthenticationToken(dcClaimsForThread, null, Collections.emptyList()));
+                    new UsernamePasswordAuthenticationToken(dcClaimsForThread, null, List.of(new SimpleGrantedAuthority("ROLE_" + dcClaimsForThread.role()))));
             try {
                 startLatch.await(); // wait for both threads to be ready
                 governanceWorkflowService.approveDeclaration(declarationId, approveRequest, dcClaimsForThread);
@@ -247,6 +248,6 @@ class DeclarationConcurrencyIT extends MySQLContainerBase {
 
     private void setSecurityContext(ScopeHelper.Claims claims) {
         SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken(claims, null, Collections.emptyList()));
+                new UsernamePasswordAuthenticationToken(claims, null, List.of(new SimpleGrantedAuthority("ROLE_" + claims.role()))));
     }
 }
